--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">quiztusan</string>
+    <string name="enter_your_name">Enter Your Name</string>
+    <string name="quiz_tujuh_belasan">Quiz Tujuh Belasan</string>
+    <string name="register">Register</string>
 </resources>
